preliminary work: add developer & application

--- a/config/locales/en/memberships.en.yml
+++ b/config/locales/en/memberships.en.yml
@@ -1,10 +1,6 @@
 en:
-  memberships:
-    fields:
-      _:
-      # 🚅 super scaffolding will insert new fields above this line.
-  activerecord:
-    attributes:
-      membership:
-        _:
-        # 🚅 super scaffolding will insert new activerecord attributes above this line.
+  memberships: &memberships
+    label: &label Project Members
+    singular: Project Member
+    navigation:
+      label: *label
